<resources>
    <string name="app_name">BUD</string>
    <string name="home_view">Home View</string>
    <string name="your_username">Your Username</string>
    <string name="current_balance">current_balance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_closer">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="your_finance_page">Your Finance Page</string>


    <string-array name="accountChoices">
        <item> - Please Choose - </item>
        <item>Checking</item>
        <item>Savings</item>
        <item>Credit</item>
    </string-array>

    <string-array name="categoryChoices">
        <item> - Please Choose - </item>
        <item>Housing</item>
        <item>Transportation</item>
        <item>Food</item>
        <item>Utilities</item>
        <item>Medical</item>
        <item>Savings</item>
        <item>Personal</item>
    </string-array>

    <string-array name="subcategoryChoices">
        <item> - Please Choose - </item>
        <item>Insurance</item>
        <item>Rent</item>
        <item>Loan</item>
        <item>Gas</item>
        <item>Maintenance</item>
        <item>Eating Out</item>
        <item>Grocery</item>
        <item>Lifestyle</item>
        <item>Entertainment</item>
        <item>Miscellaneous</item>
    </string-array>

    <string name="addTransactionButton">Add Transaction</string>
    <string name="TransactionDetailsLabel">Transaction Details</string>
    <string name="AccountNameLabel">Account Name</string>
    <string name="DateLabel">Date (MM/DD/YYYY)</string>
    <string name="PurchaseTotalLabel">Purchase Total</string>
    <string name="PurchaseCategoryLabel">Purchase Category</string>
    <string name="EnterDateHint">Enter Purchase Date</string>
    <string name="SubcategoryLabel">Purchase Subcategory</string>
    <string name="PaidToLabel">Paid To</string>
    <string name="NotesLabel">Notes</string>
    <string name="EnterTotalHint">Enter Purchase Total</string>
    <string name="PaidToHint">Enter Purchase Location</string>
    <string name="NotesHint">Any Extra Pertinent Information</string>
    <string name="AccountsLabel">Accounts</string>
    <string name="ViewAllTransactionsLabel">View All Transactions</string>
    <string name="BalanceLabel">Balance</string>
    <string name="Credit">Credit</string>
    <string name="Savings">Savings</string>
    <string name="Checking">Checking</string>
    <string name="CheckingBalanceLabel">Checking Balance</string>
    <string name="SavingsBalanceLabel">Savings Balance</string>
    <string name="CreditBalanceLabel">Credit Balance</string>
    <string name="AnalyticsLabel">Analytics</string>
    <string name="MonthLabel">This Month</string>
    <string name="YearLabel">This Year</string>
    <string name="TotalSpendingLabel">Total Spending</string>
    <string name="HousingLabel">Housing</string>
    <string name="TransportationLabel">Transportation</string>
    <string name="FoodLabel">Food</string>
    <string name="UtilitiesLabel">Utilities</string>
    <string name="MedicalLabel">Medical</string>
    <string name="SavingsLabel">Savings</string>
    <string name="PersonalLabel">Personal</string>
    <string name="SubcategoryAnalyticsLabel">Subcategory Analytics</string>
    <string name="TotalSpendingBreakdownLabel">Total Spending Breakdown of This Year</string>
    <string name="TransportationSpendingBreakdownLabel">Transportation Spending Breakdown\nof This Year</string>
    <string name="InsuranceLabel">Insurance</string>
    <string name="LodgingLabel">Lodging</string>
    <string name="EatingOutLabel">Eating Out</string>
    <string name="LifestyleLabel">Lifestyle</string>
    <string name="EntertainmentLabel">Entertainment</string>
    <string name="MiscLabel">Miscellaneous</string>
    <string name="GasLabel">Gas</string>
    <string name="LoanLabel">Loan</string>
    <string name="MaintenanceLabel">Maintenance</string>

</resources>
